--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 WikiGallery - automatic easy to use fully integrated gallery extension for PmWiki
 
-For more information look here: http://www.pmwiki.org/wiki/Cookbook/WikiGallery
+For more information look here: https://www.pmwiki.org/wiki/Cookbook/WikiGallery
